# ComfyUI-Deep-Exemplar-based-Video-Colorization

./: .gitignore  ARCHITECTURE.md  AUTO_INSTALLER_README.md  CHANGELOG.md  COLORMNET_INTEGRATION_COMPLETE.md  DeepExemplarColor.py  DeepExemplarColorizationNodes.py  DeepExemplarImageColorNode.py  DeepExemplarVideoColorNode.py  GITHUB_READY.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  MODERN_COMPONENTS_GUIDE.md  MODULAR_ARCHITECTURE.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  README.md  RELEASE_NOTES_v2.0.0.md  REPOSITORY_RENAMED.md  SILENT_AUTO_INSTALLER_COMPLETE.md  __init__.py  auto_installer.py  install.py  nodes.py  pyproject.toml  requirements.txt
Workflows/: Colorize Video Workflow.json
colormnet/: __init__.py  config.py  downloader.py  inference.py  model.py
core/: __init__.py  device.py  exceptions.py  logger.py  transforms.py  validation.py
models/: ContextualLoss.py  NonlocalNet.py  vgg19_gray.py
models/feature_extractors/: README.md  __init__.py  clip_encoder.py  dinov2_encoder.py
post_processing/: __init__.py  bilateral_filter.py  color_matcher_post.py  guided_filter.py  wls_filter.py
