[project]
name = "deep-exemplar-based-video-colorization"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "tqdm>=4.23.0", "scipy==1.2", "torchsummary>=1.3", "matplotlib>=2.2.2", "torchvision>=0.3.0", "scikit_image>=0.15.0", "torchviz>=0.0.1", "Pillow>=6.1.0", "torch", "easydict", "prefetch_generator", "PyYAML", "tensorboard", "future", "numba", "pypng", "opencv-python>=4.5", "opencv-contrib-python"]

[project.urls]
Repository = "https://github.com/jonstreeter/ComfyUI-Deep-Exemplar-based-Video-Colorization"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Deep-Exemplar-based-Video-Colorization"
Icon = ""
